Update swagger 4.
